# libprogskeet

./: CMakeLists.txt  COPYING  README.md  progskeet.h  progskeet_comm.c  progskeet_ll.c  progskeet_log.c  progskeet_private.h  progskeet_utils.c
sdk/: build
sdk/targets/linux32/: initial
sdk/targets/linux64/: initial
